force-app/main/default/objects/Medication_Drug__c/Medication_Drug__c.object-meta.xml
<CustomObject>
    <label>Medication/Drug</label>
    <nameField>
        <label>Medication/Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications/Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>