force-app/main/default/objects/Medication_Drug__c/fields/Amount_Administered__c.field-meta.xml
<CustomField>
    <fullName>Amount_Administered__c</fullName>
    <label>Amount Administered</label>
    <summarizedField>Controlled_Drug__c.Drug_Amount__c</summarizedField>
    <summaryForeignKey>Controlled_Drug__c.Controlled_Drug__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>