force-app/main/default/objects/Medication_Drug__c/fields/Behavior_Medication__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Medication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavior Medication</label>
    <type>Checkbox</type>
</CustomField>