force-app/main/default/objects/Medication_Drug__c/fields/Bottle_Number__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Number__c</fullName>
    <label>Bottle Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>