force-app/main/default/objects/Medication_Drug__c/fields/Exclude_from_Labels__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Labels</label>
    <type>Checkbox</type>
</CustomField>