force-app/main/default/objects/Medication_Drug__c/fields/Expired_Drug__c.field-meta.xml
<CustomField>
    <fullName>Expired_Drug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired Drug</label>
    <type>Checkbox</type>
</CustomField>