force-app/main/default/objects/Medication_Drug__c/fields/Initial_Days__c.field-meta.xml
<CustomField>
    <fullName>Initial_Days__c</fullName>
    <formula>IF(CONTAINS(Name,&apos;DHPP&apos;),14,IF(CONTAINS(Name,&apos;FVRCP&apos;),14,IF(CONTAINS(Name,&apos;Bordetella&apos;),365,IF(CONTAINS(Name,&apos;Leptospirosis&apos;),14,IF(CONTAINS(Name,&apos;Rabies&apos;),365,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>