force-app/main/default/objects/Medication_Drug__c/fields/Series_Days__c.field-meta.xml
<CustomField>
    <fullName>Series_Days__c</fullName>
    <formula>IF(CONTAINS(Name,&apos;DHPP&apos;),14,IF(CONTAINS(Name,&apos;FVRCP&apos;),14,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Series Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>