force-app/main/default/objects/Medication_Drug__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <length>255</length>
    <type>Text</type>
</CustomField>