force-app/main/default/objects/Medication_Drug__c/fields/Starting_Amount__c.field-meta.xml
<CustomField>
    <fullName>Starting_Amount__c</fullName>
    <label>Starting Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>