force-app/main/default/objects/Medication_Drug__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>