force-app/main/default/objects/Medication_Drug__c/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <label>Unit Size</label>
    <length>200</length>
    <type>Text</type>
</CustomField>