force-app/main/default/objects/Medication_Drug__c/recordTypes/Controlled_Drug.recordType-meta.xml
<RecordType>
    <fullName>Controlled_Drug</fullName>
    <active>true</active>
    <label>Controlled Drug</label>
</RecordType>