force-app/main/default/objects/Medication_Drug__c/recordTypes/Vaccine_Preventative.recordType-meta.xml
<RecordType>
    <fullName>Vaccine_Preventative</fullName>
    <active>true</active>
    <label>Vaccine/Preventative</label>
</RecordType>