force-app/main/default/objects/Medication_Drug__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Bottle_Number__c</columns>
    <columns>Starting_Amount__c</columns>
    <columns>Amount_Administered__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Drug_Amount_Unit__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Lot_Number__c</columns>
    <columns>Behavior_Medication__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>