force-app/main/default/objects/Medication_Drug__c/listViews/Expired_Drugs.listView-meta.xml
<ListView>
    <fullName>Expired_Drugs</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Starting_Amount__c</columns>
    <columns>Amount_Administered__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Drug_Amount_Unit__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Lot_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Expired_Drug__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Expired Drugs</label>
</ListView>