force-app/main/default/objects/Medication_Drug__c/listViews/Unopened_Drugs.listView-meta.xml
<ListView>
    <fullName>Unopened_Drugs</fullName>
    <columns>NAME</columns>
    <columns>Starting_Amount__c</columns>
    <columns>Amount_Administered__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Drug_Amount_Unit__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Lot_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount_Administered__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unopened Drugs</label>
</ListView>